# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.toml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20240623123552_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
