[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Liam Farese"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14.0"
actix-web = "4"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0.203", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.5"
