[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Liam Farese"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14.0"
actix-web = "4"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.12.5"
